fix: run updater as async + bump ver to 26.4.1